--- a/pom.xml
+++ b/pom.xml
@@ -6,18 +6,32 @@
   <modelVersion>4.0.0</modelVersion>
 
   <!-- The Basics -->
-  <artifactId>s2-tiger</artifactId>
+  <groupId>org.seasar.container</groupId>
+  <artifactId>s2junit4-compatibility-test</artifactId>
+  <version>2.4.48-SNAPSHOT</version>
   <packaging>jar</packaging>
-  <parent>
-    <groupId>org.seasar.container</groupId>
-    <artifactId>s2-container-project</artifactId>
-    <version>2.4.47</version>
-    <relativePath>../seasar2</relativePath>
-  </parent>
 
   <!-- More Project Information -->
-  <name>S2 Tiger</name>
+  <name>S2JUnit4 compatibility test</name>
   <url>http://s2container.seasar.org/</url>
+
+  <properties>
+    <s2.version>2.4.47</s2.version>
+  </properties>
+
+  <repositories>
+    <repository>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <id>maven.seasar.org</id>
+      <name>The Seasar Foundation Maven2 Repository</name>
+      <url>http://maven.seasar.org/maven2</url>
+    </repository>
+  </repositories>
 
   <!-- Build Settings -->
   <build>
@@ -38,11 +52,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <configuration>
-          <excludes>
-            <exclude>oracle/**</exclude>
-          </excludes>
-        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-source-plugin</artifactId>
@@ -56,73 +65,6 @@
           </execution>
         </executions>
       </plugin>
-      <plugin>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <configuration>
-          <encoding>UTF-8</encoding>
-          <docencoding>UTF-8</docencoding>
-          <charset>UTF-8</charset>
-          <links>
-            <link>http://download.oracle.com/javaee/6/api/</link>
-          	<link>http://java.sun.com/javase/ja/6/docs/ja/api/</link>
-            <link>http://aopalliance.sourceforge.net/doc/</link>
-            <link>http://jakarta.apache.org/commons/logging/apidocs/</link>
-            <link>http://www.csg.is.titech.ac.jp/~chiba/javassist/html/</link>
-            <link>http://www.opensymphony.com/ognl/api/</link>
-            <link>http://www.junit.org/junit/javadoc/4.4/</link>
-            <link>http://www.junit.org/junit/javadoc/3.8.1/</link>
-            <link>http://s2container.seasar.org/2.4/s2-framework/ja/apidocs/</link>
-            <link>http://s2container.seasar.org/2.4/s2-extension/ja/apidocs/</link>
-            <link>http://s2container.seasar.org/2.4/s2-tiger/ja/apidocs/</link>
-          </links>
-          <groups>
-            <group>
-              <title>S2Dxo</title>
-              <packages>org.seasar.extension.dxo*</packages>
-            </group>
-            <group>
-              <title>S2JDBC</title>
-              <packages>org.seasar.extension.jdbc*</packages>
-            </group>
-            <group>
-              <title>S2Tx</title>
-              <packages>org.seasar.extension.tx*</packages>
-            </group>
-            <group>
-              <title>S2AOP</title>
-              <packages>org.seasar.framework.aop*</packages>
-            </group>
-            <group>
-              <title>S2BeanUtils</title>
-              <packages>org.seasar.framework.beans*</packages>
-            </group>
-            <group>
-              <title>S2Container</title>
-              <packages>org.seasar.framework.container*</packages>
-            </group>
-            <group>
-              <title>EJB</title>
-              <packages>org.seasar.framework.ejb*</packages>
-            </group>
-            <group>
-              <title>JPA</title>
-              <packages>org.seasar.framework.jpa*</packages>
-            </group>
-            <group>
-              <title>S2Unit</title>
-              <packages>org.seasar.framework.unit*</packages>
-            </group>
-          </groups>
-        </configuration>
-        <executions>
-          <execution>
-            <phase>site</phase>
-            <goals>
-              <goal>javadoc</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
     </plugins>
   </build>
 
@@ -130,21 +72,21 @@
   <dependencies>
     <dependency>
       <groupId>org.seasar.container</groupId>
-      <artifactId>s2-extension</artifactId>
-      <version>${version}</version>
+      <artifactId>s2-tiger</artifactId>
+      <version>2.4.48-SNAPSHOT</version>
       <type>jar</type>
     </dependency>
     <dependency>
       <groupId>org.seasar.container</groupId>
       <artifactId>s2-framework</artifactId>
-      <version>${version}</version>
+      <version>${s2.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.seasar.container</groupId>
       <artifactId>s2-extension</artifactId>
-      <version>${version}</version>
+      <version>${s2.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
@@ -204,4 +146,5 @@
       <optional>true</optional>
     </dependency>
   </dependencies>
+
 </project>
