--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 
   <properties>
     <s2.version>2.4.47</s2.version>
+    <junit.version>4.4</junit.version>
   </properties>
 
   <repositories>
@@ -121,7 +122,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.4</version>
+      <version>${junit.version}</version>
       <type>jar</type>
     </dependency>
     <dependency>
