--- a/pom.xml
+++ b/pom.xml
@@ -184,4 +184,13 @@
     </dependency>
   </dependencies>
 
+  <profiles>
+    <profile>
+      <id>junit411</id>
+      <properties>
+        <junit.version>4.11</junit.version>
+      </properties>
+    </profile>
+
+  </profiles>
 </project>
